ChangeLog

Name: William Lai
Date: 04-07-2013
Description: Added some functions to aid in game logic
     * src/Bishop.java: Added threats function
     * src/King.java: Added threats function
     * src/Knight.java: Added threats function
     * src/Move.java: Overrode equals function of Object to allow Arraylist's contains method to work as intended
     * src/Pawn.java: Added threats function
     * src/Piece.java: Added abstract function threats for use in checking for checks
     * src/Rook.java: Added threats function
     * src/StandardChessGame.java: Implemented inCheck function and added another parameter of type Board to allow for checking of clone boards

Name: William Lai
Date: 04-02-2013
Description: ChangeLog overhaul
     * ChangeLog: Added several entries and clarified some file names

Name: Vincent Wong
Date: 03-29-2013
Description: Minor tweaks to game logic and added some GUI functionality
     * New files: Images/pieceBB.png, Images/pieceBK.png, Images/pieceBN.png, Images/pieceBP.png, Images/pieceBQ.png, Images/pieceBR.png, Images/pieceWB.png, Images/pieceWK.png, Images/pieceWN.png, Images/pieceWP.png, Images/pieceWQ.png, Images/pieceWR.png
     * src/Board.java: Added check for NULL in copy constructor, used placePiece function instead of directly accessing private member variable
     * src/Definitions.java: Changed values of NUMPIECES and PIECENAMES
     * src/Game.java: Imported java.awt.event.*, now implements MouseListener, added function setTurn
     * src/Move.java: Added toString function
     * src/StandardChessGame.java: Imported java.awt.event.*, added new member variable Piece m_selected, added MouseListener in constructor, used setTurn function, reimplemented paint function to reduce flickering, added temporary solution because moves.contain seems to have an issue, added functions mousePressed, select, moveSelected, update, and stop for GUI