@@ -5,5 +5,14 @@ public class Definitions
 	public static final int NUMCOLS = 8;
 	public static final int NUMPIECES = 12;
 	public static final String PIECENAMES[] = {"BK","BQ","BN","BB","BR","BP","WK","WQ","WN","WB","WR","WP"};
+	
+	public static Color flip(Color c)
+	{
+		if (c == Color.WHITE)
+		{
+			return Color.BLACK;
+		}
+		return Color.WHITE;
+	}
 }
 
